tools: added stamp-frame
Signed-off-by: Alessandro Rubini <rubini@gnudd.com>

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -7,6 +7,7 @@ LIBOBJ = speclib.o loader-ll.o
 
 PROGS = spec-cl spec-fwloader spec-vuart specmem
 PROGS += wr-dio-cmd wr-dio-pps wr-dio-agent wr-dio-ruler
+PROGS += stamp-frame
 
 
 all: $(LIB) $(PROGS)
